DeveloperOrg/force-app/main/default/objects/userProtals__c/userProtals__c.object-meta.xml
<CustomObject>
    <label>userProtals</label>
    <nameField>
        <label>user Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>userProtals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>