DeveloperOrg/force-app/main/default/objects/userProtals__c/fields/Father_Number__c.field-meta.xml
<CustomField>
    <fullName>Father_Number__c</fullName>
    <label>Father Number</label>
    <type>Phone</type>
</CustomField>