DeveloperOrg/force-app/main/default/objects/userProtals__c/fields/IFSC_Number__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Number__c</fullName>
    <label>IFSC Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>