DeveloperOrg/force-app/main/default/objects/userProtals__c/fields/Mother_Number__c.field-meta.xml
<CustomField>
    <fullName>Mother_Number__c</fullName>
    <label>Mother Number</label>
    <type>Phone</type>
</CustomField>